# cv-mailer

./: .env.example  .gitignore  GOOGLE_SHEETS_TEMPLATE.md  MULTI_SHEET_SUPPORT.md  QUICK_START.md  README.md  SETUP_GUIDE.md  config.py  email_templates.py  gmail_sender.py  google_sheets.py  main.py  models.py  pyproject.toml  recruiter_parser.py  requirements-dev.txt  requirements.txt  setup.py  setup.sh  tracker.py  utils.py
docs/: API_GUIDE.md  EMAIL_TEMPLATE_SAMPLES.md  GOOGLE_SHEETS_TEMPLATE.md  OAUTH_FIX.md  QUICK_START.md  SETUP_GUIDE.md  WEB_DASHBOARD_GUIDE.md
docs/design/: ARCHITECTURE.md  DESIGN_EXPLANATION.md  FEATURE_SUGGESTIONS.md
docs/design/refactoring_modernization/: MIGRATION_GUIDE.md  REFACTORING_SUMMARY.md
docs/feature_changes/: MULTI_RECRUITER_SUPPORT.md  MULTI_SHEET_SUPPORT.md
docs/fix_enhancements/: OAUTH_FIX.md  UPGRADE_PYTHON.md
frontend/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  README.md  UI_IMPROVEMENTS.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx  Layout.tsx  StatusBadge.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Spinner.tsx  Table.tsx
frontend/src/hooks/: useTheme.ts
frontend/src/pages/: ApplicationDetailPage.tsx  ApplicationsPage.tsx  DashboardPage.tsx  RecruiterDetailPage.tsx  RecruitersPage.tsx
frontend/src/types/: index.ts
src/cv_mailer/: __init__.py
src/cv_mailer/api/: __init__.py  app.py  dependencies.py
src/cv_mailer/api/routers/: __init__.py  applications.py  emails.py  recruiters.py  stats.py
src/cv_mailer/cli/: __init__.py  app.py  commands.py  display.py
src/cv_mailer/config/: __init__.py  settings.py
src/cv_mailer/core/: __init__.py  enums.py  models.py
src/cv_mailer/integrations/: __init__.py
src/cv_mailer/integrations/gmail/: __init__.py  auth.py  client.py
src/cv_mailer/integrations/google_sheets/: __init__.py  auth.py  client.py
src/cv_mailer/parsers/: __init__.py  recruiter.py
src/cv_mailer/services/: __init__.py  template_service.py  tracker.py
src/cv_mailer/utils/: __init__.py  database.py  date.py  validators.py
